--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,11 +51,10 @@ div#seo_report {
     top: 0px;
     z-index: 9;
     background: #fff;
-    overflow: scroll;
     width: calc(100vw - 60px);
     left: 0px;
     margin: 30px;
-    height: 100%;
+    height: calc(100vh - 60px);
     border: 2px solid #e2e2e2;
 }
 .seo_result_wrap {
@@ -74,4 +73,14 @@ div#seo_report {
     top: 35px;
     z-index: 99999;
     right: 35px;
+    background: #4693d5;
+    padding: 3px 20px;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+#seo_report iframe {
+    width: 100%;
+    height: 100%;
 }
